--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +34,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8888/"
+  "proxy": "http://localhost:8888/",
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  },
+  "homepage": "http://chanchana.github.io/goto"
 }
